Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -156,7 +156,7 @@ footer {
 	body {
 		margin: 0;
 		background-size: 95%;
-		background-image: none;
+		background-image: url("{{ site.baseurl }}/assets/img/largescrolltop.png");
 		background-repeat: no-repeat;
 	  	background-position: center;
 		background-attachment: scroll;
@@ -183,7 +183,7 @@ footer {
 		position: absolute;
 		background-size: 95%;
 		background-image: url("{{ site.baseurl }}/assets/img/largescrollmiddle.png");
-		background-repeat: no-repeat;
+		background-repeat: repeat-y;
 	  	background-position: center top;
 		background-attachment: scroll;
 		z-index: 10;
@@ -227,7 +227,7 @@ footer {
     		overflow: visible;
 		}
 	footer {
-		position: absolute;
+		position: static;
 		margin: 0;
 		padding: 0;
 		bottom: 5px;
